--- a/src/quickdrop/Login.form
+++ b/src/quickdrop/Login.form
@@ -271,7 +271,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="b4" green="96" red="60" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Want to join us? Join now!"/>
+                <Property name="text" type="java.lang.String" value="Not yet Registered? Join now!"/>
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="joinbtnMouseClicked"/>
